--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  font_awesome_flutter: ^9.1.0
   sizer: ^2.0.13
 
 dev_dependencies:
@@ -57,6 +58,5 @@ flutter:
         - asset: assets/fonts/OpenSans.ttf
         - asset: assets/fonts/OpenSans-Bold.ttf
           weight: 600
-  #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
