--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter:
     sdk: flutter
   font_awesome_flutter: ^9.1.0
+  get: ^4.3.8
   sizer: ^2.0.13
   smooth_page_indicator: ^0.3.0-nullsafety.0
 
